syntax = "proto3";

package org.v1;
option go_package = "devtools-services/gen/org/v1;orgv1";


service OrgService {
  rpc GetOrg(GetOrgRequest) returns (GetOrgResponse);
  rpc GetOrgs(GetOrgsRequest) returns (GetOrgsResponse);
}


message GetOrgRequest {
  string org_id = 1;
}

message GetOrgResponse {
   Org orgs = 1;
}

message Org {
  string org_id = 1;
  string name = 2;
}

message GetOrgsRequest {
}

message GetOrgsResponse {
  repeated Org orgs = 1;
}
